feat: 全面重构游戏逻辑、GUI中文化、平衡调优
### 游戏逻辑修复
- 修复装备双倍属性叠加、防具无法装备的bug
- 2D战斗对接完整事件系统(VampireFang/ThornArmor等被动生效)
- 反击伤害从50%降至25%，并显示提示消息
- 击杀奖励系统: +2攻击 +10最大生命
- 存档系统支持装备武器/防具持久化
- 物品坐标用item引用替代名字key防冲突
- 线程安全: Player/Room集合并发保护、Parser命令隔离
- removeItem清理itemSpawns、addItem防墙上放置
- respawnItems自动推送房间更新

### 新增装备 (7件)
- HealthPotion/FrostBow/ThornArmor/PhoenixFeather/VampireFang/WarHammer/SpeedBoots

### 属性平衡
- DragonscaleBulwark: +8→+12 DEF
- BloodVial: +30→+40 HP
- StonehideElixir: +10→+15 DEF
- BerserkerTotem: +5→+8 ATK, 10s→12s
- StormCleaver: 800→1000ms CD
- ShadowbaneBallista: 1200→1500ms CD
- SpeedBoots: 改为+5 ATK +3 DEF

### 全面中文化
- 17件物品/5个房间/所有命令/帮助文本
- 前端GUI全部文本中文化

### GUI重构
- 新增防具槽位显示和操作
- 多行消息系统(金色击杀/红色反击/绿色拾取)
- 物品稀有度星级显示
- 玩家血条/浮动伤害数字
- 小地图显示物品位置

### 配置修复
- CORS/webSocket代理/nginx安全头/Redis密码/docker-compose重启策略